# vigil

./: Cargo.toml  README.md
life-vigil/: CLAUDE.md  Cargo.toml  README.md
life-vigil/.github/workflows/: ci.yml  release.yml
life-vigil/src/: config.rs  envelope.rs  jsonl.rs  lib.rs  metrics.rs  pricing.rs  semconv.rs  spans.rs
src/: config.rs  lib.rs  metrics.rs  semconv.rs  spans.rs
